k8s-ingress/performance/discover/20-ns-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest100
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest100.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest101
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest101.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest102
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest102.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest103
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest103.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest104
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest104.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest105
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest105.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest106
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest106.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest107
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest107.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest108
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest108.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest109
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest109.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest110
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest110.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest111
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest111.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest112
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest112.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest113
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest113.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest114
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest114.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest115
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest115.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest116
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest116.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest117
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest117.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest118
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest118.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest119
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest119.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
